[gd_scene load_steps=20 format=3 uid="uid://d4krhxffhwybw"]

[ext_resource type="Texture2D" uid="uid://bipr33ti5kcsu" path="res://scenes/game_object/player/player.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://boepf6toi6d4m" path="res://scenes/game_object/player/player.gd" id="1_dovo2"]
[ext_resource type="PackedScene" uid="uid://bahrh342jcxw3" path="res://scenes/ability/sword/sword_ability_controller.tscn" id="2_gmlin"]
[ext_resource type="PackedScene" uid="uid://dr2pjvt12gw4l" path="res://scenes/component/health_component.tscn" id="2_ss5pk"]
[ext_resource type="PackedScene" uid="uid://cuu6tu7q31jj5" path="res://scenes/component/velocity_component.tscn" id="2_tj6oj"]
[ext_resource type="PackedScene" uid="uid://bfhobvjjqnhw7" path="res://scenes/component/random_stream_player_2d_compoent.tscn" id="6_gbew5"]
[ext_resource type="AudioStream" uid="uid://ffnggcccgbl4" path="res://assets/audio/impactMining_000.ogg" id="7_oxhc3"]
[ext_resource type="AudioStream" uid="uid://cvg20vo6jcoby" path="res://assets/audio/impactMining_001.ogg" id="8_mxgtx"]
[ext_resource type="AudioStream" uid="uid://crin03s7s3x2k" path="res://assets/audio/impactMining_002.ogg" id="9_l1g56"]
[ext_resource type="AudioStream" uid="uid://dadu1lwpe6qk3" path="res://assets/audio/impactMining_003.ogg" id="10_llc7q"]
[ext_resource type="AudioStream" uid="uid://ck4kbjty7jn6x" path="res://assets/audio/impactMining_004.ogg" id="11_bfkik"]

[sub_resource type="Animation" id="Animation_tj6oj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ss5pk"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.78, 2.63, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.1), Vector2(1.5, 0.7), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pknkg"]
_data = {
&"RESET": SubResource("Animation_tj6oj"),
&"walk": SubResource("Animation_ss5pk")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss5pk"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tj6oj"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_s3670"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tj6oj"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 5.0

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_dovo2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pknkg")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_tj6oj")]
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_ss5pk")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_gmlin")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = -18.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_ss5pk")
theme_override_styles/fill = SubResource("StyleBoxFlat_tj6oj")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_s3670")

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_tj6oj")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_8afob")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_dovo2")

[node name="HitRandomStreamPlayer2DCompoent" parent="." instance=ExtResource("6_gbew5")]
streams = Array[AudioStream]([ExtResource("7_oxhc3"), ExtResource("8_mxgtx"), ExtResource("9_l1g56"), ExtResource("10_llc7q"), ExtResource("11_bfkik")])

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="health_decreased" from="HealthComponent" to="." method="_on_health_component_health_decreased"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
